bugfix(visuals): visual alignments in the book details page and cleanup

--- a/src/app/modules/books/ui/book-overview-details-dialog/book-overview-details-dialog.component.scss
+++ b/src/app/modules/books/ui/book-overview-details-dialog/book-overview-details-dialog.component.scss
@@ -99,6 +99,7 @@
   display: flex;
   justify-content: flex-end;
   margin-top: 4px;
+  align-items: end;
 }
 
 :host ::ng-deep .details-actions button[mat-flat-button] {
